[tool.poetry]
name = "blaise-cma-functions"
version = "0.1.0"
description = "A collection of cloud function related to Blaise Case Management Application (CMA)"
authors = ["James Anthony Williams <81305008+JAWilliamsONS@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^24.3.0"
pytest = "^8.1.1"
flask = "^2.0.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
isort = "^5.13.2"
codecov = "^2.1.13"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client", rev = "e6bdae46ea5136e607a39aac9b5deeb17c5dbf6b"}
google-cloud-logging = "^3.10.0"
flake8 = "^7.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
