[tool.poetry]
name = "blaise_cma_functions"
version = "0.1.0"
description = "A collection of cloud function related to Blaise Case Management Application (CMA)"
authors = ["Blaise Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
black = "^25.1.0"
pytest = "^8.4.2"
flask = "^3.1.2"
pytest-cov = "^7.0.0"
mypy = "^1.17.1"
isort = "^6.0.1"
codecov = "^2.1.13"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client", rev = "v1.0.2"}
google-cloud-logging = "^3.10.0"
flake8 = "^7.3.0"
certifi = "^2025.8.3"
charset-normalizer = "^3.4.3"
coverage = "^7.10.6"
google-api-core = "^2.25.1"
google-auth = "^2.40.3"
google-cloud-appengine-logging = "^1.6.2"
grpcio = "^1.74.0"
grpcio-status = "^1.74.0"
importlib-metadata = "^8.7.0"
opentelemetry-api = "^1.36.0"
platformdirs = "^4.4.0"
pluggy = "^1.6.0"
protobuf = "^6.32.0"
pycodestyle = "^2.14.0"
pyflakes = "^3.4.0"
requests = "^2.32.5"
typing-extensions = "^4.15.0"
urllib3 = "^2.5.0"
wrapt = "^1.17.3"
zipp = "^3.23.0"

[tool.poetry.group.dev.dependencies]
click = "^8.2.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
