[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
black = "^25.1.0"
pytest = "^8.4.2"
flask = "^3.1.2"
pytest-cov = "^7.0.0"
mypy = "^1.17.1"
isort = "^6.0.1"
codecov = "^2.1.13"
blaise-restapi = {git = "https://github.com/ONSdigital/blaise-api-python-client", rev = "v1.0.2"}
google-cloud-logging = "^3.10.0"
flake8 = "^7.3.0"
google-cloud-appengine-logging = "^1.6.2"
platformdirs = "^4.4.0"
pluggy = "^1.6.0"
protobuf = "^6.32.0"
pycodestyle = "^2.14.0"
pyflakes = "^3.4.0"
requests = "^2.32.5"
urllib3 = "^2.5.0"
wrapt = "^1.17.3"
zipp = "^3.23.0"

[tool.poetry.group.dev.dependencies]
click = "^8.2.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
